update twitter and linkedin username

--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,9 @@ keywords: >
   texas a&m, tamu, pax, pax river, patuxent river, china lake, lexington park,
   maryland, ridgecrent, california, javascript, aws, node.js, portfolio
 screenshot: https://284f7e12378ae35fe21a-7e78ad4f897ae0179c6a991c235afb37.ssl.cf5.rackcdn.com/images/website-snapshot.jpg
-linkedin_username: stevecancode
+linkedin_username: trustycoder
 github_username:  steveortiz
-twitter_username: stevecancode
+twitter_username: trustycoder
 email: steve@ortizaggies.com
 
 # Build settings
