--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ keywords: >
   steveortiz, steve, ortiz, rackspace, navair, software, developer, chess,
   texas a&m, tamu, pax, pax river, patuxent river, china lake, lexington park,
   maryland, ridgecrent, california, javascript, aws, node.js, portfolio
-screenshot: https://284f7e12378ae35fe21a-7e78ad4f897ae0179c6a991c235afb37.ssl.cf5.rackcdn.com/images/website-snapshot.jpg
+screenshot: https://s3-us-west-2.amazonaws.com/images.ortizaggies.com/website-snapshot.jpg
 linkedin_username: trustycoder
 github_username:  steveortiz
 twitter_username: trustycoder
